--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 .idea
+plugins/tyrannical
+plugins/revelation
+revelation
 tyrannical
-revelation
-revelation
