--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "tyrannical"]
-	path = tyrannical
+[submodule "plugins/tyrannical"]
+	path = plugins/tyrannical
 	url = git@github.com:Elv13/tyrannical.git
-[submodule "awesome-revelation"]
-	path = awesome-revelation
+[submodule "plugins/revelation"]
+	path = plugins/revelation
 	url = git@github.com:bioe007/awesome-revelation.git
