--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "plugins/tyrannical"]
 	path = plugins/tyrannical
-	url = git@github.com:Elv13/tyrannical.git
+	url = git@github.com:kicumkicum/tyrannical.git
 [submodule "plugins/revelation"]
 	path = plugins/revelation
 	url = git@github.com:bioe007/awesome-revelation.git
