Update picom.conf for disable shadows

--- a/picom.conf
+++ b/picom.conf
@@ -8,51 +8,51 @@ fade-out-step = 0.03
 fade-delta = 4
 
 # Включение/выключение теней для окон
-shadow = true
+shadow = false
 # Цвет и размытие тени
-shadow-radius = 10
-shadow-offset-x = -10
-shadow-offset-y = -10
-shadow-opacity = 0.7
+# shadow-radius = 10
+# shadow-offset-x = -10
+# shadow-offset-y = -10
+# shadow-opacity = 0.7
 # Размытие фона для окон
-blur-background = true
-blur-method = "kernel"
-blur-strength = 5
+# blur-background = true
+# blur-method = "kernel"
+# blur-strength = 5
 
 # Включить и настроить тени для окон
-shadow-exclude = [
-  "class_g = 'Conky'",
-  "class_g = 'I3bar'",
-  "class_g = 'Dunst'"
-]
+# shadow-exclude = [
+#   "class_g = 'Conky'",
+#   "class_g = 'I3bar'",
+#   "class_g = 'Dunst'"
+# ]
 
 # Размытие заднего фона
-background-opacity = 0.9
+# background-opacity = 0.9
 
 # Конфигурация для окон, которые не должны иметь тени
-shadow-ignore-shaped = true
-no-dock-shadow = true
-no-buffy-shadow = true
-no-border-shadow = true
+# shadow-ignore-shaped = true
+# no-dock-shadow = true
+# no-buffy-shadow = true
+# no-border-shadow = true
 
 # Прозрачность окон
-opacity-rule = [
-  "80:class_g = 'URxvt'",
-  "80:class_g = 'Xterm'",
-  "90:class_g = 'Gimp'"
-]
+# opacity-rule = [
+#   "80:class_g = 'URxvt'",
+#   "80:class_g = 'Xterm'",
+#   "90:class_g = 'Gimp'"
+# ]
 
 # Отображение окон на рабочем столе
 detect-client-opacity = true
 # Прозрачность панелей
-panel-opacity = 0.8
+# panel-opacity = 0.8
 
 # Установка оптимизации работы с видео
 #glx-swap-method = "buffer-age"
 glx-copy-from-front = false
 
 # Разрешения для окон (например, не применять тени для окон с прямоугольной рамкой)
-frame-opacity = 1
+# frame-opacity = 1
 clear-shadow = true
 clear-pre-render = true
 
